--- a/src/main/webapp/checkout.html
+++ b/src/main/webapp/checkout.html
@@ -64,6 +64,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				$("#labellist2").html(lis2);
 				$("#labellist3").html(lis3);
 			},'json');
+
+			$.get('/shop/brand/findAllBrand',{},function (data) {
+				var lis1='<h6>Nike\'s Wear</h6>';
+				var lis2='<h6>Li-Ning\'s Wear</h6>';
+				var lis3='<h6>ANTA\'s Wear</h6>';
+				for(var i=0;i<data.length;i++){
+					var li = '<li><a href="brand.html?bid='+ data[i].bid + '">' + data[i].bname + '</a></li>';
+					if(data[i].bname.startsWith("Nike")) {lis1 += li;}
+					else if(data[i].bname.startsWith("Li-Ning")) {lis2 += li;}
+					else { lis3 += li;}
+				}
+				$("#brandlist1").html(lis1);
+				$("#brandlist2").html(lis2);
+				$("#brandlist3").html(lis3);
+			},'json');
 			load();
 		})
 		//页面动态加载
@@ -294,14 +309,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					"/shop/user/findUser",
 					{},
 					function (data) {
-						if(data != "null"){
+						console.log(data);
+						if(data == null){
 							console.log(data);
 							//如果没有用户信息则跳出提示框登录
 							//确认消息按钮
 							var r = confirm("请先登录")//方法返回值boolean类型
-							if (r==true)
+							if (r===true)
 							{
-								location.href = "/shop/login.html"
+								location.href = "/shop/login.html?status=pay"
 							}
 						}else{
 							//如果已经登录则跳转到结算界面
@@ -402,33 +418,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<ul class="dropdown-menu multi-column columns-3">
 									<div class="row">
 										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Home Collection</h6>
-												<li><a href="brand.html">Cookware</a></li>
-												<li><a href="brand.html">Sofas</a></li>
-												<li><a href="brand.html">Dining Tables</a></li>
-												<li><a href="brand.html">Shoe Racks</a></li>
-												<li><a href="brand.html">Home Decor</a></li>
+											<ul class="multi-column-dropdown" id="brandlist1">
+												<!--												<h6>Home Collection</h6>-->
+												<!--												<li><a href="brand.html">Cookware</a></li>-->
+												<!--												<li><a href="brand.html">Sofas</a></li>-->
+												<!--												<li><a href="brand.html">Dining Tables</a></li>-->
+												<!--												<li><a href="brand.html">Shoe Racks</a></li>-->
+												<!--												<li><a href="brand.html">Home Decor</a></li>-->
 											</ul>
 										</div>
 										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Office Collection</h6>
-												<li><a href="brand.html">Carpets</a></li>
-												<li><a href="brand.html">Tables</a></li>
-												<li><a href="brand.html">Sofas</a></li>
-												<li><a href="brand.html">Shoe Racks</a></li>
-												<li><a href="brand.html">Sockets</a></li>
-												<li><a href="brand.html">Electrical Machines</a></li>
+											<ul class="multi-column-dropdown" id="brandlist2">
+												<!--												<h6>Office Collection</h6>-->
+												<!--												<li><a href="brand.html">Carpets</a></li>-->
+												<!--												<li><a href="brand.html">Tables</a></li>-->
+												<!--												<li><a href="brand.html">Sofas</a></li>-->
+												<!--												<li><a href="brand.html">Shoe Racks</a></li>-->
+												<!--												<li><a href="brand.html">Sockets</a></li>-->
+												<!--												<li><a href="brand.html">Electrical Machines</a></li>-->
 											</ul>
 										</div>
 										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Decorations</h6>
-												<li><a href="brand.html">Toys</a></li>
-												<li><a href="brand.html">Wall Clock</a></li>
-												<li><a href="brand.html">Lighting</a></li>
-												<li><a href="brand.html">Top Brands</a></li>
+											<ul class="multi-column-dropdown" id="brandlist3">
+												<!--												<h6>Decorations</h6>-->
+												<!--												<li><a href="brand.html">Toys</a></li>-->
+												<!--												<li><a href="brand.html">Wall Clock</a></li>-->
+												<!--												<li><a href="brand.html">Lighting</a></li>-->
+												<!--												<li><a href="brand.html">Top Brands</a></li>-->
 											</ul>
 										</div>
 										<div class="clearfix"></div>
