--- a/src/main/webapp/products.html
+++ b/src/main/webapp/products.html
@@ -62,6 +62,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				$("#labellist2").html(lis2);
 				$("#labellist3").html(lis3);
 			},'json');
+
+			$.get('/shop/brand/findAllBrand',{},function (data) {
+				var lis1='<h6>Nike\'s Wear</h6>';
+				var lis2='<h6>Li-Ning\'s Wear</h6>';
+				var lis3='<h6>ANTA\'s Wear</h6>';
+				for(var i=0;i<data.length;i++){
+					var li = '<li><a href="brand.html?bid='+ data[i].bid + '">' + data[i].bname + '</a></li>';
+					if(data[i].bname.startsWith("Nike")) {lis1 += li;}
+					else if(data[i].bname.startsWith("Li-Ning")) {lis2 += li;}
+					else { lis3 += li;}
+				}
+				$("#brandlist1").html(lis1);
+				$("#brandlist2").html(lis2);
+				$("#brandlist3").html(lis3);
+			},'json');
 			findCount();
 		});
 
@@ -269,15 +284,56 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										default:leftdivlist+=leftdiv ;
 									}
 						}
+
+						//横排加载 稍微修改下顺序
+						// $("#list1").html(divlist1);
+						// $("#list2").html(divlist2);
+						// $("#list3").html(divlist3);
+						// $("#list4").html(divlist4);
+						// $("#list5").html(divlist5);
+						// $("#list6").html(divlist6);
+						// $("#list7").html(divlist7);
+						// $("#list8").html(divlist8);
+						// $("#list9").html(divlist9);
 						$("#list1").html(divlist1);
-						$("#list2").html(divlist2);
-						$("#list3").html(divlist3);
-						$("#list4").html(divlist4);
+						$("#list2").html(divlist4);
+						$("#list3").html(divlist7);
+						$("#list4").html(divlist2);
 						$("#list5").html(divlist5);
-						$("#list6").html(divlist6);
-						$("#list7").html(divlist7);
-						$("#list8").html(divlist8);
+						$("#list6").html(divlist8);
+						$("#list7").html(divlist3);
+						$("#list8").html(divlist6);
 						$("#list9").html(divlist9);
+
+						//如果没有内容则隐藏标签
+						if(divlist1 == ''){
+							$("#list1").hide();
+						}
+						if(divlist4 == ''){
+							$("#list2").hide();
+						}
+						if(divlist7 == ''){
+							$("#list3").hide();
+						}
+						if(divlist2 == ''){
+							$("#list4").hide();
+						}
+						if(divlist5 == ''){
+							$("#list5").hide();
+						}
+						if(divlist8 == ''){
+							$("#list6").hide();
+						}
+						if(divlist3 == ''){
+							$("#list7").hide();
+						}
+						if(divlist6 == ''){
+							$("#list8").hide();
+						}
+						if(divlist9 == ''){
+							$("#list9").hide();
+						}
+
 						$("#leftlist").html(leftdivlist);
 						if(pb.list.length<=9){
 							$("#leftliststart").css("display", "none");
@@ -380,33 +436,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<ul class="dropdown-menu multi-column columns-3">
 									<div class="row">
 										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Home Collection</h6>
-												<li><a href="brand.html">Cookware</a></li>
-												<li><a href="brand.html">Sofas</a></li>
-												<li><a href="brand.html">Dining Tables</a></li>
-												<li><a href="brand.html">Shoe Racks</a></li>
-												<li><a href="brand.html">Home Decor</a></li>
+											<ul class="multi-column-dropdown" id="brandlist1">
+												<!--												<h6>Home Collection</h6>-->
+												<!--												<li><a href="brand.html">Cookware</a></li>-->
+												<!--												<li><a href="brand.html">Sofas</a></li>-->
+												<!--												<li><a href="brand.html">Dining Tables</a></li>-->
+												<!--												<li><a href="brand.html">Shoe Racks</a></li>-->
+												<!--												<li><a href="brand.html">Home Decor</a></li>-->
 											</ul>
 										</div>
 										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Office Collection</h6>
-												<li><a href="brand.html">Carpets</a></li>
-												<li><a href="brand.html">Tables</a></li>
-												<li><a href="brand.html">Sofas</a></li>
-												<li><a href="brand.html">Shoe Racks</a></li>
-												<li><a href="brand.html">Sockets</a></li>
-												<li><a href="brand.html">Electrical Machines</a></li>
+											<ul class="multi-column-dropdown" id="brandlist2">
+												<!--												<h6>Office Collection</h6>-->
+												<!--												<li><a href="brand.html">Carpets</a></li>-->
+												<!--												<li><a href="brand.html">Tables</a></li>-->
+												<!--												<li><a href="brand.html">Sofas</a></li>-->
+												<!--												<li><a href="brand.html">Shoe Racks</a></li>-->
+												<!--												<li><a href="brand.html">Sockets</a></li>-->
+												<!--												<li><a href="brand.html">Electrical Machines</a></li>-->
 											</ul>
 										</div>
 										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Decorations</h6>
-												<li><a href="brand.html">Toys</a></li>
-												<li><a href="brand.html">Wall Clock</a></li>
-												<li><a href="brand.html">Lighting</a></li>
-												<li><a href="brand.html">Top Brands</a></li>
+											<ul class="multi-column-dropdown" id="brandlist3">
+												<!--												<h6>Decorations</h6>-->
+												<!--												<li><a href="brand.html">Toys</a></li>-->
+												<!--												<li><a href="brand.html">Wall Clock</a></li>-->
+												<!--												<li><a href="brand.html">Lighting</a></li>-->
+												<!--												<li><a href="brand.html">Top Brands</a></li>-->
 											</ul>
 										</div>
 										<div class="clearfix"></div>
