--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -406,7 +406,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-3 new-collections-grid">
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
 						<div class="new-collections-grid1-image">
-							<a href="single.html?gid=1" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
+							<a href="single.html?gid=1" class="product-image"><img src="images/nike01.jpg" alt=" " class="img-responsive" /></a>
 							<div class="new-collections-grid1-image-pos">
 								<a href="single.html?gid=1">Quick View</a>
 							</div>
@@ -431,15 +431,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-						<h4><a href="single.html?gid=1">Formal Shirt</a></h4>
+						<h4><a href="single.html?gid=1">Nike大标耐克短袖</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$325</i> <span class="item_price">$250</span><a class="item_add" href="javascript:addToCart(1)">add to cart </a></p>
+							<p><i>$300</i> <span class="item_price">$218</span><a class="item_add" href="javascript:addToCart(1)">add to cart </a></p>
 						</div>
 					</div>
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
 						<div class="new-collections-grid1-image">
-							<a href="single.html?gid=2" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
+							<a href="single.html?gid=2" class="product-image"><img src="images/nike02.jpg" alt=" " class="img-responsive" /></a>
 							<div class="new-collections-grid1-image-pos">
 								<a href="single.html?gid=2">Quick View</a>
 							</div>
@@ -464,10 +464,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-						<h4><a href="single.html?gid=2">Running Shoes</a></h4>
+						<h4><a href="single.html?gid=2">Nike耐克休闲套装</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="javascript:addToCart(2)">add to cart </a></p>
+							<p><i>$420</i> <span class="item_price">$380</span><a class="item_add" href="javascript:addToCart(2)">add to cart </a></p>
 						</div>
 					</div>
 				</div>
@@ -475,7 +475,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-3 new-collections-grid">
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
 						<div class="new-collections-grid1-image">
-							<a href="single.html?gid=3" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
+							<a href="single.html?gid=3" class="product-image"><img src="images/lining01.jpg" alt=" " class="img-responsive" /></a>
 							<div class="new-collections-grid1-image-pos">
 								<a href="single.html?gid=3">Quick View</a>
 							</div>
@@ -500,15 +500,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-						<h4><a href="single.html?gid=3">Formal Shirt</a></h4>
+						<h4><a href="single.html?gid=3">中国李宁短袖</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$325</i> <span class="item_price">$250</span><a class="item_add" href="javascript:addToCart(3)">add to cart </a></p>
+							<p><i>$200</i> <span class="item_price">$148</span><a class="item_add" href="javascript:addToCart(3)">add to cart </a></p>
 						</div>
 					</div>
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
 						<div class="new-collections-grid1-image">
-							<a href="single.html?gid=4" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
+							<a href="single.html?gid=4" class="product-image"><img src="images/lining02.jpg" alt=" " class="img-responsive" /></a>
 							<div class="new-collections-grid1-image-pos">
 								<a href="single.html?gid=4">Quick View</a>
 							</div>
@@ -533,10 +533,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-						<h4><a href="single.html?gid=4">Running Shoes</a></h4>
+						<h4><a href="single.html?gid=4">李宁休闲套装</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="javascript:addToCart(4)">add to cart </a></p>
+							<p><i>$300</i> <span class="item_price">$218</span><a class="item_add" href="javascript:addToCart(4)">add to cart </a></p>
 						</div>
 					</div>
 				</div>
@@ -544,7 +544,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-3 new-collections-grid">
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
 						<div class="new-collections-grid1-image">
-							<a href="single.html?gid=5" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
+							<a href="single.html?gid=5" class="product-image"><img src="images/lining03.jpg" alt=" " class="img-responsive" /></a>
 							<div class="new-collections-grid1-image-pos">
 								<a href="single.html?gid=5">Quick View</a>
 							</div>
@@ -569,15 +569,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-						<h4><a href="single.html?gid=5">Formal Shirt</a></h4>
+						<h4><a href="single.html?gid=5">中国李宁卫衣</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$325</i> <span class="item_price">$250</span><a class="item_add" href="javascript:addToCart(5)">add to cart </a></p>
+							<p><i>$325</i> <span class="item_price">$218</span><a class="item_add" href="javascript:addToCart(5)">add to cart </a></p>
 						</div>
 					</div>
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
 						<div class="new-collections-grid1-image">
-							<a href="single.html?gid=6" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
+							<a href="single.html?gid=6" class="product-image"><img src="images/lining04.jpg" alt=" " class="img-responsive" /></a>
 							<div class="new-collections-grid1-image-pos">
 								<a href="single.html?gid=6">Quick View</a>
 							</div>
@@ -602,10 +602,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-						<h4><a href="single.html?gid=6">Running Shoes</a></h4>
+						<h4><a href="single.html?gid=6">Li-Ning运动短袖</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="javascript:addToCart(6)">add to cart </a></p>
+							<p><i>$580</i> <span class="item_price">$400</span><a class="item_add" href="javascript:addToCart(6)">add to cart </a></p>
 						</div>
 					</div>
 				</div>
@@ -613,7 +613,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-3 new-collections-grid">
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
 						<div class="new-collections-grid1-image">
-							<a href="single.html?gid=7" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
+							<a href="single.html?gid=7" class="product-image"><img src="images/lining05.jpg" alt=" " class="img-responsive" /></a>
 							<div class="new-collections-grid1-image-pos">
 								<a href="single.html?gid=7">Quick View</a>
 							</div>
@@ -638,15 +638,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-						<h4><a href="single.html?gid=7">Formal Shirt</a></h4>
+						<h4><a href="single.html?gid=7">李宁高领防风衣</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$325</i> <span class="item_price">$250</span><a class="item_add" href="javascript:addToCart(7)">add to cart </a></p>
+							<p><i>$325</i> <span class="item_price">$218</span><a class="item_add" href="javascript:addToCart(7)">add to cart </a></p>
 						</div>
 					</div>
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
 						<div class="new-collections-grid1-image">
-							<a href="single.html?gid=8" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
+							<a href="single.html?gid=8" class="product-image"><img src="images/lining06.jpg" alt=" " class="img-responsive" /></a>
 							<div class="new-collections-grid1-image-pos">
 								<a href="single.html?gid=8">Quick View</a>
 							</div>
@@ -671,10 +671,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-						<h4><a href="single.html?gid=8">Running Shoes</a></h4>
+						<h4><a href="single.html?gid=8">李宁运动风polo衫</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="javascript:addToCart(8)">add to cart </a></p>
+							<p><i>$280</i> <span class="item_price">$218</span><a class="item_add" href="javascript:addToCart(8)">add to cart </a></p>
 						</div>
 					</div>
 				</div>
